<resources>
    <string name="app_name">DevCom</string>

    <!-- MainActivity -->
    <string name="main_sub_title">Blog Yazıları</string>
    <string name="main_sub_title2">Duyurular</string>
    <string name="main_sub_title3">Haberler</string>
    <string name="main_title">Ana Sayfa</string>
    <string name="Form">Forum</string>
    <string name="Event">Etkinlik</string>

    <!-- main_blog_pagerow -->
    <string name="like">Beğen</string>
    <string name="comment">Yorum</string>
    <string name="blog_name">Blog Name</string>
<<<<<<< HEAD
    <string name="nickname">NickName</string>
    <string name="blog_info">little blog information</string>

=======
    <string name="nickname">Username</string>
    <string name="blog_info">little blog information</string>

    <!-- item_question_row -->
    <string name="timer">süre</string>
    <string name="Question">Sorunun Başlığı</string>
    <string name="Question_introdoucten">Sorunun İçeriği</string>



>>>>>>> FormDesign
    <!-- sign_in && register && password_reset -->
    <string name="nickname_text">Kullanıcı Adı</string>
    <string name="password">Şifre</string>
    <string name="edt_email">E-mail</string>
    <string name="sign_in">Giriş Yap</string>
    <string name="register">Üye Ol</string>
    <string name="forget">Şifreni mi unuttun?</string>
    <string name="recovery">Giriş için yenile.</string>
    <string name="password_reset">Şifreni Sıfırla</string>
    <string name="used_same_username">Bu kullanıcı adı daha önce kullanılmış</string>
    <string name="get_email">Email adresinizi giriniz</string>
    <string name="used_same_email">Bu email adresi daha önce kullanılmış</string>
<<<<<<< HEAD
=======
    <string name="error_login_disable">We have blocked all requests from this device due to unusual activity. Try again later. [ Access to this account has been temporarily disabled due to many failed login attempts. You can immediately restore it by resetting your password or you can try again later. ]</string>
    <string name="error_login_password">The password is invalid or the user does not have a password.</string>
    <string name="error_login_email">There is no user record corresponding to this identifier. The user may have been deleted.</string>
    <string name="error_login_email_translate">Bu tanımlayıcıya karşılık gelen kullanıcı kaydı yok.</string>
    <string name="error_login_disable_translate">Birçok başarısız oturum açma girişimi nedeniyle bu hesaba erişim geçici olarak devre dışı bırakıldı</string>
    <string name="error_login_password_translate">Parola geçersiz veya kullanıcının parolası yok.</string>
>>>>>>> FormDesign
    <string name="sign_up_succesfull">başarılı bir şekilde kayıt oldunuz</string>
    <string name="facebook_google">veya diğer hesaplarla giriş yapınız.</string>
    <string name="reset_password">Şifreni Yenile</string>
    <string name="input_email">Email adresinizi giriniz</string>
    <string name="check_email">Email adresinizi kontrol edin.</string>
    <string name="registered_email">Lütfen kayıtlı bir email adresi giriniz</string>
    <string name="cant_change_password">Bu hesap google veya facebook ile kayıtlı olduğu için şifre değiştiremezsiniz</string>
    <string name="reset_password_info">Hesabına bağlı olan \n e-posta adresini giriniz.</string>
    <string name="facebook_app_id">172053089050398</string>
    <string name="fb_login_protocol_scheme">fb172053089050398</string>
    <string name="facebook_client_token">4cb6c41f2afbc8832255f7c682bbb318</string>
    <string name="something_went_wrong">Bir şeyler yanlış gitti, tekrar deneyiniz</string>
    <string name="please_enter_username">Lütfen geçerli bir kullanıcı adı giriniz</string>
    <string name="please_enter_email_username">Lütfen e-mail adresinizi giriniz</string>
    <string name="please_enter_password_username">Lütfen şifrenizi girinizi</string>
    <string name="password_rules">En az 1 sayı\nEn az 1 küçük harf\nEn az 1 büyük harf\nEn az 6 karakter </string>

    <string name="google_register_after_info">Kayıt işlemini tamamlamak için\nKullanıcı adınızı belirleyiniz</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Profile -->
    <string name="profile">Profil</string>
    <string name="exit_app">Çıkış Yap</string>
    <string name="settings">Ayarlar</string>
    <string name="account">Hesap</string>
<<<<<<< HEAD
=======
    <string name="add_blog">Blog Ekle</string>
    <string name="add_announcements">Duyuru Ekle</string>
    <string name="add_news">Haber Ekle</string>
>>>>>>> FormDesign
</resources>