<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@drawable/main_button_v1"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_profile"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/circle_img"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_nickname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:hint="@string/nickname"
            app:layout_constraintStart_toEndOf="@+id/iv_profile"
            app:layout_constraintTop_toTopOf="@id/iv_profile" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_blog_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:hint="@string/blog_name"
            app:layout_constraintStart_toEndOf="@+id/iv_profile"
            app:layout_constraintTop_toBottomOf="@+id/tv_nickname" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_like"
            android:layout_width="21dp"
            android:layout_height="21dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="7dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_blog_info"
            app:srcCompat="@drawable/ic_like" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_comment"
            android:layout_width="21dp"
            android:layout_height="21dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="7dp"
            app:layout_constraintStart_toEndOf="@+id/iv_like"
            app:layout_constraintTop_toBottomOf="@+id/tv_blog_info"
            app:srcCompat="@drawable/ic_comment" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_comment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="11dp"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="@string/comment"
            android:textSize="11sp"
            app:layout_constraintStart_toEndOf="@id/tv_like"
            app:layout_constraintTop_toBottomOf="@+id/iv_comment" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_like"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="@string/like"
            android:textSize="11sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_like" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_blog_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:hint="@string/blog_info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_profile"
            tools:layout_editor_absoluteY="77dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>