<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background = "@color/backgroundWhite"
    tools:context=".ui.activity.logins.SignInActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_elipsee"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_marginTop="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:srcCompat="@drawable/elipse" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_logo"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:gravity = "center"
                android:layout_marginBottom="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/iv_elipsee"
                app:layout_constraintEnd_toEndOf="@id/iv_elipsee"
                app:layout_constraintStart_toStartOf="@id/iv_elipsee"
                app:layout_constraintTop_toTopOf="@+id/iv_elipsee"
                app:srcCompat="@drawable/gdsc" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_app_title"
                android:layout_width="162dp"
                android:layout_height="44dp"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_elipsee"
                app:srcCompat="@drawable/devcomname" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etp_username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/edit_text_custom"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/nickname_text"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_app_title" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etp_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="30dp"
                android:inputType="textPassword"
                android:background="@drawable/edit_text_custom"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etp_username" />

            <LinearLayout
                android:id="@+id/tv_forget_passaword"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="13dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/etp_password"
                tools:layout_editor_absoluteX="1dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/forget" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/Blue"
                    android:text="@string/recovery" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_facebook_google"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/facebook_google"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_register" />

            <Button
                android:id="@+id/btn_sign_in"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="70dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="70dp"
                android:background="@drawable/btn_sign_in_custom"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@color/backgroundWhite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_forget_passaword" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="70dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="70dp"
                android:background="@drawable/btn_sign_in_custom"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@color/backgroundWhite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_sign_in" />

            <ImageView
                android:id="@+id/iv_facebook"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="140dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintEnd_toStartOf="@+id/iv_google"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_facebook_google"
                app:srcCompat="@drawable/facebook" />

            <ImageView
                android:id="@+id/iv_google"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="140dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_facebook"
                app:layout_constraintTop_toBottomOf="@+id/tv_facebook_google"
                app:srcCompat="@drawable/google" />

            <ProgressBar
                android:id="@+id/pb_sign"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:theme="@style/Theme.AppCompat"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>