<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/white"
tools:context=".ui.fragments.AuthorityEditorProfileFragment">

<com.google.android.material.imageview.ShapeableImageView
    android:id="@+id/iv_profile2"
    android:layout_width="100sp"
    android:layout_height="100sp"
    android:layout_marginStart="20dp"
    android:layout_marginTop="20dp"
    android:src="@drawable/circle_img"
    app:layout_constraintStart_toStartOf="parent"
    app:shapeAppearanceOverlay="@style/Circular"
    android:paddingTop="2dp"
    android:paddingEnd="2dp"
    android:paddingStart="2dp"
    android:paddingBottom="2dp"
    app:layout_constraintTop_toBottomOf="@id/iv_header"
    app:strokeColor="@color/black"
    app:strokeWidth="2sp"
    />

<androidx.appcompat.widget.AppCompatImageView
    android:id="@+id/iv_header"
    android:layout_width="423dp"
    android:layout_height="105dp"
    android:layout_marginEnd="1dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.461"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:srcCompat="@drawable/top_backgorund" />

<TextView
    android:id="@+id/tv_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:text="@string/profile"
    android:textColor="#B2000000"
    android:textSize="20sp"
    android:textStyle="bold"
    app:layout_constraintBottom_toBottomOf="@+id/iv_header"
    app:layout_constraintTop_toTopOf="@id/iv_header"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

<ImageView
    android:id="@+id/iv_back_profile_to_main"
    android:layout_width="45dp"
    android:layout_height="45dp"
    android:layout_marginTop="20dp"
    android:layout_marginStart="20dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:srcCompat="@drawable/ic_resource_return"
     />

    <ImageView
        android:id="@+id/iv_add_post"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/ic_baseline_add_circle_outline_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
         />


<androidx.appcompat.widget.AppCompatTextView
    android:id="@+id/tv_username"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    android:gravity="center"
    android:hint="@string/nickname"
    android:textColor="@color/black"
    android:textSize="20sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toEndOf="@id/iv_profile2"
    app:layout_constraintTop_toBottomOf="@id/iv_header" />

<androidx.appcompat.widget.AppCompatTextView
    android:id="@+id/tv_score"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:gravity="center"
    android:hint="score"
    android:textColor="@color/black"
    android:textSize="20sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toEndOf="@id/iv_profile2"
    app:layout_constraintTop_toBottomOf="@id/tv_username" />

<LinearLayout
    android:id="@+id/ll_settings"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:orientation="vertical"
    android:layout_marginTop="15dp"
    app:layout_constraintTop_toBottomOf="@id/iv_profile2"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    >

    <LinearLayout
        android:id="@+id/line_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_baseline_account_circle_24" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:textColor="@color/black"
            android:text="@string/account"
            android:textSize="18sp" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black"/>

    <LinearLayout
        android:id="@+id/line_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_baseline_settings_24" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:textColor="@color/black"
            android:text="@string/settings"
            android:textSize="18sp" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black"/>

    <LinearLayout
        android:id="@+id/line_exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_baseline_exit_to_app_24" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:textColor="@color/black"
            android:text="@string/exit_app"
            android:textSize="18sp" />

    </LinearLayout>
</LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>